--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ html, body {
   transform-origin: top;
   -webkit-animation: animateWave 2000ms cubic-bezier(0.23, 1, 0.32, 1) forwards;
           animation: animateWave 2000ms cubic-bezier(0.23, 1, 0.32, 1) forwards;
-  background-image: url("../images/wave-bg.svg");
+  background-image: url("../assets/wave-bg.svg");
   background-position: center;
   background-repeat: no-repeat;
 }
