--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ footer a:not(.nav-link) {
   position: absolute;
   bottom: -25px;
   right: -30px;
-  background-image: url("../images/marker.svg");
+  background-image: url("../assets/marker.svg");
   background-repeat: no-repeat;
 }
 
