--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ html, body {
   color: rgba(0, 0, 0, 0.6) !important;
 }
 
-/* intro section */
+/* intro section: */
 .intro-title {
   font-weight: 800;
 }
